fix pipeline